--- a/src/main/resource/plugin.yml
+++ b/src/main/resource/plugin.yml
@@ -1,10 +1,8 @@
-name: 'DebugKeeper'
+name: DebugKeeper
 version: '${version}'
-main: 'com.baioretto.debugkeeper.DebugKeeper'
-api-version: '1.18'
-prefix: 'DebugKeeper'
-description: 'A plugin that helps you debugging with intellij without time-out exception'
-
-commands:
-  test:
-    description: test
+main: com.baioretto.debugkeeper.DebugKeeper
+prefix: DebugKeeper
+description: A plugin that helps you debugging with intellij without time-out exception
+load: POSTWORLD
+author: baioretto
+api-version: 1.18
